force-app/main/default/objects/Channel_Registry__mdt/Channel_Registry__mdt.object-meta.xml
<CustomObject>
    <label>Channel Registry</label>
    <pluralLabel>Channel Registries</pluralLabel>
</CustomObject>