force-app/main/default/objects/Channel_Registry__mdt/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>