force-app/main/default/objects/Channel_Registry__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>